--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url(/img/background.jpg);
+  background-image: url(./img/background.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
