--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,7 +1,3 @@
-/* page.module.css */
-
-/* Reset & base */
-
 /* Header */
 .header {
   position: fixed;
@@ -114,6 +110,14 @@
 .active .login {
   transition: none;
   transform: translateX(-400px);
+}
+
+.register-link {
+  text-decoration: none;
+}
+
+.login-link {
+  text-decoration: none;
 }
 
 .register {
